--- a/package.json
+++ b/package.json
@@ -28,7 +28,9 @@
     "@types/web3": "^1.2.2",
     "eslint": "^8",
     "eslint-config-next": "14.2.5",
+    "less-loader": "^12.2.0",
     "next-plugin-less": "^1.0.2",
+    "next-transpile-modules": "^10.0.1",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "5.5.4"
