--- a/package.json
+++ b/package.json
@@ -3,8 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
+    "dev": "node server.js",
+    "next": "cross-env PORT=3000 next dev",
+    "build": "cross-env NODE_ENV=production next build",
     "start": "next start",
     "lint": "next lint"
   },
@@ -26,6 +27,7 @@
     "@types/react": "18.3.3",
     "@types/react-dom": "^18",
     "@types/web3": "^1.2.2",
+    "cross-env": "^7.0.3",
     "eslint": "^8",
     "eslint-config-next": "14.2.5",
     "less-loader": "^12.2.0",
