--- a/package.json
+++ b/package.json
@@ -17,9 +17,9 @@
     "less": "^4.2.0",
     "next": "14.2.5",
     "next-redux-wrapper": "^8.1.0",
-    "react": "^18",
+    "react": "18.3.1",
     "react-confirm-alert": "^3.0.6",
-    "react-dom": "^18",
+    "react-dom": "18.3.1",
     "react-redux": "^9.1.2"
   },
   "devDependencies": {
