--- a/package.json
+++ b/package.json
@@ -33,7 +33,9 @@
     "less-loader": "^12.2.0",
     "next-plugin-less": "^1.0.2",
     "next-transpile-modules": "^10.0.1",
-    "postcss": "^8",
+    "postcss": "^8.4.41",
+    "postcss-loader": "^8.1.1",
+    "postcss-px-to-viewport": "^1.1.1",
     "tailwindcss": "^3.4.1",
     "typescript": "5.5.4"
   }
